# NotifyBridge

./: Dockerfile  IMPLEMENTATION_PLAN.md  README.md  SPECS.MD  docker-compose.yml  notifybridge.db  pyproject.toml  security.md
.codex/environments/: environment.toml
src/notifybridge/: __init__.py  __main__.py  cli.py  config.py  logging_utils.py  runtime.py
src/notifybridge/api/: app.py  routes.py
src/notifybridge/core/: events.py  ingestion.py  keys.py  models.py  normalization.py
src/notifybridge/ingress/: email.py  syslog.py
src/notifybridge/static/: app.css  app.js
src/notifybridge/storage/: repository.py  schema.py
src/notifybridge/templates/: index.html
src/notifybridge/tui/: app.py  demo.py  viewmodels.py
tests/: test_api.py  test_cli.py  test_config_and_bootstrap.py  test_ingestion.py  test_packaging.py  test_repository.py  test_socket_inputs.py  test_transport_adapters.py  test_tui_commands.py  test_tui_demo.py  test_tui_viewmodels.py  test_web_ui.py
