[project]
name = "notifybridge"
version = "0.1.0"
description = "Local notification intake and debugging platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosmtpd>=1.4.6",
  "fastapi>=0.116.1",
  "jinja2>=3.1.6",
  "textual>=6.1.0",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.2.0",
]

[project.scripts]
notifybridge = "notifybridge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notifybridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
